@@ -4,6 +4,7 @@
 * Bugfix: the blance cache could cause panic when two outputs were being spent from the same address
 * Pre-cache all the addresses from all the wallet files at startup
 * Banned IP range 129.132.230.0/24 changed to 129.132.230.70 - 129.132.230.100
+* No TexUI mode for apps with no access to stdin (use "-textui=false" switch)
 
 0.8.7
 * Added a special wallet "ADRESSES" that contains the address book (for MakeTx tab)
